--- a/style.css
+++ b/style.css
@@ -19,6 +19,19 @@
     margin-top: 15px;
 }
 
+.modal-label{
+    margin-top: 7px;
+}
+
+.custom-range-modal{
+    width: 70%;
+    margin: 8px;
+}
+
+.input-group-text{
+    width: 121px;
+}
+
 #sidebar {
     min-width: 200px;
     max-width: 200px;
